--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ updateCurrentTime();
 // Google 表單設定
 // ----------------------
 // 1. 這裡填入你的 Google 表單 formResponse URL
-const FORM_URL = "https://docs.google.com/forms/d/e/你的表單ID/formResponse";
+const FORM_URL = "https://docs.google.com/forms/d/e/d/1s8o01rW7MiwN1T_Yb3wq61dRhFIcbKqmsU10lYaSsH8/formResponse";
 
 // 2. 表單欄位 entry ID (需用瀏覽器開發者工具抓取)
 // 假設「時間」欄位 entry.123456，「狀態」欄位 entry.654321
@@ -88,3 +88,4 @@ toggleBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
