--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h1>智慧藥盒模擬</h1>
 
-<button id="toggleBtn">馬</button>
+<button id="toggleBtn">我</button>
 <div id="status">目前狀態：關閉</div>
 <div id="currentTime"></div>
 
@@ -88,4 +88,5 @@ toggleBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
