--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <meta charset="UTF-8">
 <title>智慧藥盒管理</title>
 <style>
-  table { border-collapse: collapse; width: 50%; }
+  body { font-family: "Microsoft JhengHei"; }
+  table { border-collapse: collapse; width: 60%; margin-top: 10px; }
   th, td { border: 1px solid #333; padding: 8px; text-align: center; }
   th { background-color: #eee; }
-  input[type="text"], input[type="time"] { width: 100%; }
-  button { padding: 4px 8px; }
+  input[type="text"], input[type="time"] { width: 100%; box-sizing: border-box; }
+  button { padding: 4px 8px; cursor: pointer; }
+  .remind { background-color: #ffe9a7; animation: blink 1s infinite; }
+  @keyframes blink {
+    0%, 100% { background-color: #ffe9a7; }
+    50% { background-color: #fff; }
+  }
 </style>
 </head>
 <body>
@@ -29,32 +35,61 @@
       <th>藥品名稱</th>
       <th>時間</th>
       <th>已服用</th>
+      <th>操作</th>
     </tr>
   </thead>
   <tbody></tbody>
 </table>
 
+<!-- 提醒區 -->
+<div id="reminder" style="margin-top:10px; color:red; font-weight:bold;"></div>
+
 <script>
 const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwxOl74ue1pG5rHSSueIwP5gMrA05lgTmk9PN1vSRzAYkcHPKHyNvTLNeAij2kvnYrv/exec';
+
+let drugData = [];
 
 // 取得並顯示列表
 function fetchDrugs() {
   fetch(WEB_APP_URL)
     .then(res => res.json())
     .then(json => {
-      const tbody = document.querySelector("#drugTable tbody");
-      tbody.innerHTML = "";
-      json.data.forEach(item => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${item.rowIndex - 1}</td>
-          <td>${item.name}</td>
-          <td>${item.time}</td>
-          <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done ? 'checked' : ''} onchange="toggleDone(this)"></td>
-        `;
-        tbody.appendChild(tr);
-      });
+      drugData = json.data;
+      renderTable();
     });
+}
+
+// 顯示表格
+function renderTable() {
+  const tbody = document.querySelector("#drugTable tbody");
+  tbody.innerHTML = "";
+  const now = new Date();
+  const currentTime = now.getHours() * 60 + now.getMinutes();
+  let reminderMsg = "";
+
+  drugData.forEach(item => {
+    const tr = document.createElement("tr");
+    const [h, m] = item.time.split(":").map(Number);
+    const drugTime = h * 60 + m;
+    const diff = Math.abs(drugTime - currentTime);
+    const isReminder = diff <= 5 && !item.done; // ±5分鐘提醒
+
+    if (isReminder) {
+      tr.classList.add("remind");
+      reminderMsg += `⏰ ${item.name} 即將在 ${item.time} 服用！<br>`;
+    }
+
+    tr.innerHTML = `
+      <td>${item.rowIndex - 1}</td>
+      <td>${item.name}</td>
+      <td>${item.time}</td>
+      <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done ? 'checked' : ''} onchange="toggleDone(this)"></td>
+      <td><button onclick="deleteDrug(${item.rowIndex})">刪除</button></td>
+    `;
+    tbody.appendChild(tr);
+  });
+
+  document.getElementById("reminder").innerHTML = reminderMsg || "";
 }
 
 // 勾選已服用
@@ -70,6 +105,8 @@ function toggleDone(cb) {
     if(result.status !== "success") {
       alert("更新失敗");
       cb.checked = !done;
+    } else {
+      fetchDrugs();
     }
   });
 }
@@ -95,6 +132,27 @@ function addDrug() {
     }
   });
 }
+
+// 刪除藥品
+function deleteDrug(rowIndex) {
+  if(!confirm("確定要刪除此藥品嗎？")) return;
+  fetch(WEB_APP_URL, {
+    method: "POST",
+    body: JSON.stringify({ action: "delete", data: { rowIndex } })
+  })
+  .then(res => res.json())
+  .then(result => {
+    if(result.status === "success") {
+      fetchDrugs();
+    } else {
+      alert("刪除失敗：" + result.message);
+    }
+  });
+}
+
+// 自動刷新與提醒檢查
+setInterval(fetchDrugs, 60000); // 每分鐘更新
+setInterval(() => renderTable(), 30000); // 每30秒重畫提醒狀態
 
 // 初始化
 fetchDrugs();
