--- a/index.html
+++ b/index.html
@@ -4,30 +4,26 @@
 <meta charset="UTF-8">
 <title>智慧藥盒管理</title>
 <style>
-  body { font-family: "Microsoft JhengHei"; }
-  table { border-collapse: collapse; width: 60%; margin-top: 10px; }
+  table { border-collapse: collapse; width: 60%; }
   th, td { border: 1px solid #333; padding: 8px; text-align: center; }
   th { background-color: #eee; }
-  input[type="text"], input[type="time"] { width: 100%; box-sizing: border-box; }
-  button { padding: 4px 8px; cursor: pointer; }
-  .remind { background-color: #ffe9a7; animation: blink 1s infinite; }
-  @keyframes blink {
-    0%, 100% { background-color: #ffe9a7; }
-    50% { background-color: #fff; }
-  }
+  input[type="text"], input[type="time"] { width: 100%; }
+  button { padding: 4px 8px; }
+  tr.alert { background-color: #ffdddd; animation: blink 1s infinite alternate; }
+  @keyframes blink { from { background-color: #ffcccc; } to { background-color: #ffffff; } }
 </style>
 </head>
 <body>
 <h2>智慧藥盒管理</h2>
 
-<!-- 新增藥品區 -->
+<!-- 新增藥品 -->
 <div>
   <input type="text" id="newName" placeholder="藥品名稱">
   <input type="time" id="newTime">
   <button onclick="addDrug()">新增藥品</button>
 </div>
 
-<!-- 藥品列表 -->
+<!-- 列表 -->
 <table id="drugTable">
   <thead>
     <tr>
@@ -41,81 +37,47 @@
   <tbody></tbody>
 </table>
 
-<!-- 提醒區 -->
-<div id="reminder" style="margin-top:10px; color:red; font-weight:bold;"></div>
-
 <script>
 const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwxOl74ue1pG5rHSSueIwP5gMrA05lgTmk9PN1vSRzAYkcHPKHyNvTLNeAij2kvnYrv/exec';
 
-let drugData = [];
-
-// 取得並顯示列表
+// 取得資料
 function fetchDrugs() {
   fetch(WEB_APP_URL)
     .then(res => res.json())
     .then(json => {
-      drugData = json.data;
-      renderTable();
+      const tbody = document.querySelector("#drugTable tbody");
+      tbody.innerHTML = "";
+      const now = new Date();
+      const nowMins = now.getHours() * 60 + now.getMinutes();
+
+      json.data.forEach(item => {
+        const tr = document.createElement("tr");
+
+        // --- 計算是否接近服藥時間 ±5 分 ---
+        const [h, m] = item.time.split(":").map(Number);
+        const targetMins = h * 60 + m;
+        const diff = Math.abs(nowMins - targetMins);
+        if (diff <= 5 && !item.done) {
+          tr.classList.add("alert"); // 顯示提醒
+        }
+
+        tr.innerHTML = `
+          <td>${item.rowIndex - 1}</td>
+          <td>${item.name}</td>
+          <td>${item.time}</td>
+          <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done ? 'checked' : ''} onchange="toggleDone(this)"></td>
+          <td><button onclick="deleteDrug(${item.rowIndex})">刪除</button></td>
+        `;
+        tbody.appendChild(tr);
+      });
     });
 }
 
-// 顯示表格
-function renderTable() {
-  const tbody = document.querySelector("#drugTable tbody");
-  tbody.innerHTML = "";
-  const now = new Date();
-  const currentTime = now.getHours() * 60 + now.getMinutes();
-  let reminderMsg = "";
-
-  drugData.forEach(item => {
-    const tr = document.createElement("tr");
-    const [h, m] = item.time.split(":").map(Number);
-    const drugTime = h * 60 + m;
-    const diff = Math.abs(drugTime - currentTime);
-    const isReminder = diff <= 5 && !item.done; // ±5分鐘提醒
-
-    if (isReminder) {
-      tr.classList.add("remind");
-      reminderMsg += `⏰ ${item.name} 即將在 ${item.time} 服用！<br>`;
-    }
-
-    tr.innerHTML = `
-      <td>${item.rowIndex - 1}</td>
-      <td>${item.name}</td>
-      <td>${item.time}</td>
-      <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done ? 'checked' : ''} onchange="toggleDone(this)"></td>
-      <td><button onclick="deleteDrug(${item.rowIndex})">刪除</button></td>
-    `;
-    tbody.appendChild(tr);
-  });
-
-  document.getElementById("reminder").innerHTML = reminderMsg || "";
-}
-
-// 勾選已服用
-function toggleDone(cb) {
-  const rowIndex = parseInt(cb.dataset.rowIndex);
-  const done = cb.checked;
-  fetch(WEB_APP_URL, {
-    method: "POST",
-    body: JSON.stringify({ action: "update", data: [{ rowIndex, done }] })
-  })
-  .then(res => res.json())
-  .then(result => {
-    if(result.status !== "success") {
-      alert("更新失敗");
-      cb.checked = !done;
-    } else {
-      fetchDrugs();
-    }
-  });
-}
-
-// 新增藥品
+// 新增
 function addDrug() {
   const name = document.getElementById("newName").value.trim();
   const time = document.getElementById("newTime").value;
-  if(!name || !time) { alert("請輸入藥品名稱與時間"); return; }
+  if (!name || !time) { alert("請輸入藥品名稱與時間"); return; }
 
   fetch(WEB_APP_URL, {
     method: "POST",
@@ -123,7 +85,7 @@ function addDrug() {
   })
   .then(res => res.json())
   .then(result => {
-    if(result.status === "success") {
+    if (result.status === "success") {
       document.getElementById("newName").value = "";
       document.getElementById("newTime").value = "";
       fetchDrugs();
@@ -133,16 +95,35 @@ function addDrug() {
   });
 }
 
-// 刪除藥品
-function deleteDrug(rowIndex) {
-  if(!confirm("確定要刪除此藥品嗎？")) return;
+// 更新服用狀態
+function toggleDone(cb) {
+  const rowIndex = parseInt(cb.dataset.rowIndex);
+  const done = cb.checked;
   fetch(WEB_APP_URL, {
     method: "POST",
-    body: JSON.stringify({ action: "delete", data: { rowIndex } })
+    body: JSON.stringify({ action: "update", data: [{ rowIndex, done }] })
   })
   .then(res => res.json())
   .then(result => {
-    if(result.status === "success") {
+    if (result.status !== "success") {
+      alert("更新失敗");
+      cb.checked = !done;
+    } else {
+      fetchDrugs(); // 即時更新提醒狀態
+    }
+  });
+}
+
+// 刪除
+function deleteDrug(rowIndex) {
+  if (!confirm("確定要刪除此藥品嗎？")) return;
+  fetch(WEB_APP_URL, {
+    method: "POST",
+    body: JSON.stringify({ action: "delete", rowIndex })
+  })
+  .then(res => res.json())
+  .then(result => {
+    if (result.status === "success") {
       fetchDrugs();
     } else {
       alert("刪除失敗：" + result.message);
@@ -150,12 +131,9 @@ function deleteDrug(rowIndex) {
   });
 }
 
-// 自動刷新與提醒檢查
-setInterval(fetchDrugs, 60000); // 每分鐘更新
-setInterval(() => renderTable(), 30000); // 每30秒重畫提醒狀態
-
-// 初始化
+// 初始化與自動刷新
 fetchDrugs();
+setInterval(fetchDrugs, 60000); // 每 1 分鐘更新一次
 </script>
 </body>
 </html>
