--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   th { background-color: #eee; }
   input[type="text"], input[type="time"] { width: 100%; }
   button { padding: 4px 8px; }
-  tr.alert { background-color: #ffdddd; animation: blink 1s infinite alternate; }
-  @keyframes blink { from { background-color: #ffcccc; } to { background-color: #ffffff; } }
+  tr.remind { background-color: #ffeb3b; animation: blink 1s infinite alternate; }
+  @keyframes blink { from {background-color: #fff176;} to {background-color: #fff;} }
 </style>
 </head>
 <body>
 <h2>智慧藥盒管理</h2>
 
+<!-- 新增藥品區 -->
 <div>
   <input type="text" id="newName" placeholder="藥品名稱">
   <input type="time" id="newTime">
   <button onclick="addDrug()">新增藥品</button>
 </div>
 
+<!-- 藥品列表 -->
 <table id="drugTable">
   <thead>
     <tr>
@@ -35,83 +37,71 @@
   <tbody></tbody>
 </table>
 
-<audio id="alertSound" preload="auto">
-  <source src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" type="audio/ogg">
-</audio>
-
 <script>
 const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwxOl74ue1pG5rHSSueIwP5gMrA05lgTmk9PN1vSRzAYkcHPKHyNvTLNeAij2kvnYrv/exec';
-let drugData = [];           // 暫存藥品資料
-let alertedList = new Set(); // 已提醒過的藥品
+let drugCache = [];
 
-// 取得資料（完整更新）
+// ----------- 取得試算表資料並局部更新 -----------
 function fetchDrugs() {
   fetch(WEB_APP_URL)
     .then(res => res.json())
     .then(json => {
-      if (json.status === "success") {
-        drugData = json.data;
-        renderTable();
+      if (json.status !== "success") return;
+
+      const newData = json.data;
+      const tbody = document.querySelector("#drugTable tbody");
+
+      // 比對變更：若藥品數量不同，直接重畫
+      if (newData.length !== drugCache.length) {
+        renderTable(newData);
+        drugCache = newData;
+        return;
       }
+
+      // 局部比對：若資料不同，只更新變更的列
+      newData.forEach((item, i) => {
+        const old = drugCache[i];
+        if (!old || JSON.stringify(old) !== JSON.stringify(item)) {
+          updateRow(item);
+        }
+      });
+
+      drugCache = newData;
     });
 }
 
-// 顯示資料表
-function renderTable() {
+// ----------- 渲染整個表格 -----------
+function renderTable(data) {
   const tbody = document.querySelector("#drugTable tbody");
   tbody.innerHTML = "";
-  drugData.forEach(item => {
+  data.forEach(item => {
     const tr = document.createElement("tr");
+    tr.dataset.rowIndex = item.rowIndex;
     tr.innerHTML = `
       <td>${item.rowIndex - 1}</td>
       <td>${item.name}</td>
       <td>${item.time}</td>
-      <td><input type="checkbox" data-row-index="${item.rowIndex}" ${item.done ? 'checked' : ''} onchange="toggleDone(this)"></td>
+      <td><input type="checkbox" ${item.done ? 'checked' : ''} onchange="toggleDone(this, ${item.rowIndex})"></td>
       <td><button onclick="deleteDrug(${item.rowIndex})">刪除</button></td>
     `;
     tbody.appendChild(tr);
   });
-  checkReminders(); // 初次渲染時檢查提醒
 }
 
-// 檢查是否需提醒（不重新下載）
-function checkReminders() {
-  const now = new Date();
-  const nowMins = now.getHours() * 60 + now.getMinutes();
-  const tbody = document.querySelector("#drugTable tbody");
-  const rows = tbody.querySelectorAll("tr");
-
-  drugData.forEach((item, idx) => {
-    const [h, m] = item.time.split(":").map(Number);
-    const targetMins = h * 60 + m;
-    const diff = Math.abs(nowMins - targetMins);
-    const tr = rows[idx];
-    
-    if (diff <= 5 && !item.done) {
-      tr.classList.add("alert");
-      if (!alertedList.has(item.rowIndex)) {
-        playAlert();
-        alertedList.add(item.rowIndex);
-      }
-    } else {
-      tr.classList.remove("alert");
-      alertedList.delete(item.rowIndex);
-    }
-  });
+// ----------- 更新單一列（不重畫整表）-----------
+function updateRow(item) {
+  const row = document.querySelector(`tr[data-row-index="${item.rowIndex}"]`);
+  if (!row) return renderTable(drugCache); // 若找不到列，就整個重畫
+  row.querySelector("td:nth-child(2)").textContent = item.name;
+  row.querySelector("td:nth-child(3)").textContent = item.time;
+  row.querySelector("input[type=checkbox]").checked = item.done;
 }
 
-// 播放提示音
-function playAlert() {
-  const sound = document.getElementById("alertSound");
-  sound.currentTime = 0;
-  sound.play().catch(()=>{});
-}
-
-// 新增藥品
+// ----------- 新增藥品 -----------
 function addDrug() {
   const name = document.getElementById("newName").value.trim();
   const time = document.getElementById("newTime").value;
-  if (!name || !time) { alert("請輸入藥品名稱與時間"); return; }
+  if (!name || !time) return alert("請輸入藥品名稱與時間");
 
   fetch(WEB_APP_URL, {
     method: "POST",
@@ -129,9 +119,8 @@ function addDrug() {
   });
 }
 
-// 勾選已服用
-function toggleDone(cb) {
-  const rowIndex = parseInt(cb.dataset.rowIndex);
+// ----------- 勾選已服用 -----------
+function toggleDone(cb, rowIndex) {
   const done = cb.checked;
   fetch(WEB_APP_URL, {
     method: "POST",
@@ -142,34 +131,48 @@ function toggleDone(cb) {
     if (result.status !== "success") {
       alert("更新失敗");
       cb.checked = !done;
-    } else {
-      drugData.find(d => d.rowIndex === rowIndex).done = done;
-      checkReminders(); // 立即更新提醒狀態
     }
   });
 }
 
-// 刪除藥品
+// ----------- 刪除藥品 -----------
 function deleteDrug(rowIndex) {
-  if (!confirm("確定要刪除此藥品嗎？")) return;
+  if (!confirm("確定刪除此藥品？")) return;
   fetch(WEB_APP_URL, {
     method: "POST",
     body: JSON.stringify({ action: "delete", rowIndex })
   })
   .then(res => res.json())
   .then(result => {
-    if (result.status === "success") {
-      fetchDrugs();
+    if (result.status === "success") fetchDrugs();
+    else alert("刪除失敗：" + result.message);
+  });
+}
+
+// ----------- 自動提醒功能 -----------
+function checkReminders() {
+  const now = new Date();
+  const nowTime = now.getHours() * 60 + now.getMinutes();
+
+  document.querySelectorAll("#drugTable tbody tr").forEach(tr => {
+    const timeText = tr.children[2].textContent;
+    if (!timeText) return;
+    const [h, m] = timeText.split(":").map(Number);
+    const target = h * 60 + m;
+    const diff = Math.abs(target - nowTime);
+
+    if (diff <= 5 && !tr.querySelector("input[type=checkbox]").checked) {
+      tr.classList.add("remind");
     } else {
-      alert("刪除失敗：" + result.message);
+      tr.classList.remove("remind");
     }
   });
 }
 
-// 初始化
+// ----------- 初始化 -----------
 fetchDrugs();
-setInterval(checkReminders, 10000); // 🔁 每10秒檢查提醒（不重新載入）
-setInterval(fetchDrugs, 60000);     // 每1分鐘更新資料
+setInterval(fetchDrugs, 10000); // 每10秒局部同步試算表
+setInterval(checkReminders, 10000); // 每10秒檢查提醒
 </script>
 </body>
 </html>
